--- a/group_vars/windows.yml
+++ b/group_vars/windows.yml
@@ -11,18 +11,19 @@ username: 'Admin'
 password: 'zabbix'
 
 #--------------------------- Adção de templates -----------------------------------------------------#
-# Macro Padronizada adição de Templates no Agentes 
 zabbix_link_templates_windows:
   - Windows by Zabbix agent active
   - ICMP Ping
 
 # Configuração Zabbix agent Windows
 # https://cdn.zabbix.com/zabbix/binaries/stable/5.4/5.4.9/zabbix_agent2-5.4.9-windows-amd64-openssl-static.zip
-
+# https://cdn.zabbix.com/zabbix/binaries/stable/5.4/5.4.9/zabbix_agent-5.4.9-windows-amd64.zip
 zabbix_win_download_url: https://cdn.zabbix.com/zabbix/binaries/stable
 zabbix_version: 5.4
 zabbix_version_long: 5.4.9
 zabbix_win_package: zabbix_agent2-{{ zabbix_version_long }}-windows-amd64-openssl-static.zip
 zabbix_win_download_link: "{{ zabbix_win_download_url }}/{{ zabbix_version}}/{{ zabbix_version_long }}/{{ zabbix_win_package }}"
 zabbix_win_install_dir: 'C:\zabbix'
-zabbix_dest_download_msi: C:\Users\Administrador\Downloads\zabbix_agent.msi
+zabbix_win_userparameter: 'C:\zabbix\scripts'
+zabbix_win_log: 'C:\zabbix\log'
+timeout: 30
