--- a/roles/zabbix_agent/tasks/api.add.windows.yml
+++ b/roles/zabbix_agent/tasks/api.add.windows.yml
@@ -1,4 +1,6 @@
-- name: Adcionando hosts no zabbix Frontend do Zabbix.
+---
+# tasks file for api_zabbix create hosts windows
+- name: Adcionando hosts Windows no zabbix Frontend do Zabbix.
   local_action:
     module: community.zabbix.zabbix_host
     server_url: http://{{ zbx_front }}/zabbix/
@@ -8,7 +10,7 @@
     visible_name: "{{ansible_fqdn}}"
     host_groups:
       - '{{ host_grupo }}'
-    link_templates: "{{ zabbix_link_templates }}"
+    link_templates: "{{ zabbix_link_templates_windows }}"
     status: enabled
     state: present
     inventory_mode: automatic
@@ -16,7 +18,7 @@
       - type: '1'
         main: 1
         useip: 1
-        ip: "{{ ansible_all_ipv4_addresses[0]}}"
+        ip: "{{ ansible_ip_addresses[0] }}"
         dns: ""
         port: "10050"
     proxy: '{{ proxy_name }}'
