--- a/roles/zabbix_agent/tasks/uninstall_zabbix_agent.yml
+++ b/roles/zabbix_agent/tasks/uninstall_zabbix_agent.yml
@@ -1,7 +1,7 @@
 
 #---------------------------------------------------------------------------#
 
-- name: "Windows | Set path to zabbix.exe"
+- name: "Windows | Set path to zabbix_agent2.exe"
   set_fact:
     zabbix_win_exe_path: '{{ zabbix_win_install_dir }}\bin\zabbix_agent2.exe'
 
