--- a/roles/grafana_server/tasks/main.yml
+++ b/roles/grafana_server/tasks/main.yml
@@ -1,3 +1,3 @@
 - name: Instalação do Grafana Server / Adição dos Plugins
   include_tasks: grafana.yml
-
+  when: ansible_facts['distribution_major_version'] == "8"
