--- a/roles/zabbix_agent/tasks/main.yml
+++ b/roles/zabbix_agent/tasks/main.yml
@@ -16,16 +16,16 @@
 
 - name: Instalando Agente zabbix 2 no Windows
   include_tasks: install.agent.windows.yml
-  when: zabbix_agent_os_family == "Windows"
+  when: ansible_os_family == "Windows"
 
-- name: Adcionando host Automatico via Ansible 
-  include_tasks: api.add.windows.yml
-  when: zabbix_agent_os_family == "Windows"
+# - name: Adcionando host Automatico via Ansible 
+#   include_tasks: api.add.windows.yml
+#   when: ansible_os_family == "Windows"
 
 # - name: Remover Agente via Ansible. 
 #   include_tasks: uninstall_zabbix_agent.yml
-#    when: zabbix_agent_os_family == "Windows"
+#   when: ansible_os_family == "Windows"
 
 # - name: Atualizando Sistema Operacional 
 #   include_tasks: update.windows.yml
-#   when: zabbix_agent_os_family == "Windows"
+#   when: ansible_os_family == "Windows"
