--- a/zabbix_agent_install_Win.yml
+++ b/zabbix_agent_install_Win.yml
@@ -1,12 +1,24 @@
-- name: Playbook de instalação do Agentes Windows de hosts no Zabbix .
+#-----------------------------------------------------------------------#
+- name: Deploy Instalação Agente windows .
   hosts:
-    - windows
-    
+    - DC01
   vars:
     - zbx_front: 192.168.3.100
     - proxy_name: 'PROXY-SP'
     - zbx_proxy: 192.168.3.130
-    - host_grupo: Matriz-A
-    
+    - host_grupo: Empresa-X
   roles:
     - role: zabbix_agent
+#-----------------------------------------------------------------------#
+- name: Playbook de instalação do Agente Windows .
+  hosts:
+    - DC02
+  vars:
+    - zbx_front: 192.168.3.100
+    - proxy_name: 'PROXY-RJ'
+    - zbx_proxy: 192.168.3.140
+    - host_grupo: Empresa-Y
+  roles:
+    - role: zabbix_agent
+#-----------------------------------------------------------------------#
+
