--- a/roles/zabbix_agent/tasks/install.agent.windows.yml
+++ b/roles/zabbix_agent/tasks/install.agent.windows.yml
@@ -4,7 +4,7 @@
   set_fact:
     zabbix_win_exe_path: '{{ zabbix_win_install_dir }}\bin\zabbix_agent2.exe'
 #-----------------------------------------------------------------------------#
-- name:  Criando estrutura Diretorio Instalacao Agente
+- name: Criando estrutura Diretorio Instalacao Agente
   win_file:
     path: "{{ item }}"
     state: directory
@@ -21,13 +21,13 @@
     force: False
     follow_redirects: all
 #-------------------------------------------------------------------------------#
-- name: Windows | Unzip Arquivo.
+- name: Unzip Arquivo.
   win_unzip:
     src: '{{ zabbix_win_install_dir }}\{{ zabbix_win_package }}'
     dest: "{{ zabbix_win_install_dir }}"
     creates: '{{ zabbix_win_exe_path }}'
 #--------------------------------------------------------------------------------#
-- name: Windows | Instalando Serviço no Windows
+- name: Instalando Serviço no Windows
   win_command: '{{ zabbix_win_exe_path }} --config {{ zabbix_win_install_dir }}\conf\zabbix_agent2.conf --install'
   register: zabbix_windows_install
   ignore_errors: yes
@@ -44,7 +44,7 @@
     state: started
   ignore_errors: yes
 #----------------------------------------------------------------------------------#
-- name: "Windows | Add Porta Zabbix Firewall rule "
+- name: Add Porta Zabbix Firewall rule
   win_firewall_rule:
     name: Zabbix Agent
     localport: 10050
