--- a/roles/zabbix_agent/tasks/main.yml
+++ b/roles/zabbix_agent/tasks/main.yml
@@ -18,9 +18,9 @@
   include_tasks: install.agent.windows.yml
   when: ansible_os_family == "Windows"
 
-# - name: Adcionando host Automatico via Ansible 
-#   include_tasks: api.add.windows.yml
-#   when: ansible_os_family == "Windows"
+- name: Adcionando host Automatico via Ansible 
+  include_tasks: api.add.windows.yml
+  when: ansible_os_family == "Windows"
 
 # - name: Remover Agente via Ansible. 
 #   include_tasks: uninstall_zabbix_agent.yml
