--- a/roles/zabbix_agent/tasks/uninstall_zabbix_agent.yml
+++ b/roles/zabbix_agent/tasks/uninstall_zabbix_agent.yml
@@ -1,7 +1,7 @@
 
 #---------------------------------------------------------------------------#
 
-- name: "Windows | Set path to zabbix_agent2.exe"
+- name: Definindo Caminho zabbix_agent2.exe
   set_fact:
     zabbix_win_exe_path: '{{ zabbix_win_install_dir }}\bin\zabbix_agent2.exe'
 
@@ -21,5 +21,6 @@
     state: absent
   loop:
     - "{{ zabbix_win_install_dir }}"
-    - "{{ zabbix_win_userparameter }}"
+    - "{{ zabbix_win_userparameters }}"
+    - "{{ zabbix_win_scripts }}"
     - "{{ zabbix_win_log }}"
