--- a/deploy.zabbix.yml
+++ b/deploy.zabbix.yml
@@ -51,25 +51,25 @@
   roles:
     - role: zabbix_proxy
 #-----------------------------------------------------------------------#
-- name: Deploy Instalação Agente windows .
-  hosts:
-    - DC01
-  vars:
-    - zbx_front: 192.168.3.100
-    - proxy_name: 'PROXY-SP'
-    - zbx_proxy: 192.168.3.130
-    - host_grupo: Empresa-X
-  roles:
-    - role: zabbix_agent
-#-----------------------------------------------------------------------#
-- name: Playbook de instalação do Agente Windows .
-  hosts:
-    - DC02
-  vars:
-    - zbx_front: 192.168.3.100
-    - proxy_name: 'PROXY-RJ'
-    - zbx_proxy: 192.168.3.140
-    - host_grupo: Empresa-Y
-  roles:
-    - role: zabbix_agent
-#-----------------------------------------------------------------------#
+# - name: Deploy Instalação Agente windows .
+#   hosts:
+#     - DC01
+#   vars:
+#     - zbx_front: 192.168.3.100
+#     - proxy_name: 'PROXY-SP'
+#     - zbx_proxy: 192.168.3.130
+#     - host_grupo: Empresa-X
+#   roles:
+#     - role: zabbix_agent
+# #-----------------------------------------------------------------------#
+# - name: Playbook de instalação do Agente Windows .
+#   hosts:
+#     - DC02
+#   vars:
+#     - zbx_front: 192.168.3.100
+#     - proxy_name: 'PROXY-RJ'
+#     - zbx_proxy: 192.168.3.140
+#     - host_grupo: Empresa-Y
+#   roles:
+#     - role: zabbix_agent
+# #-----------------------------------------------------------------------#
