--- a/roles/zabbix_agent_windows/tasks/uninstall_zabbix_agent.yml
+++ b/roles/zabbix_agent_windows/tasks/uninstall_zabbix_agent.yml
@@ -5,9 +5,6 @@
   set_fact:
     zabbix_win_exe_path: '{{ zabbix_win_install_dir }}\bin\zabbix_agent2.exe'
 
-- name: Remove Serviço zabbix agent2
-  win_command: '{{ zabbix_win_exe_path }} --config {{ zabbix_win_install_dir }}\conf\zabbix_agent2.conf --uninstall'
-  ignore_errors: yes
 
 - name: Parando Serviço 
   win_service:
@@ -15,11 +12,17 @@
     state: stopped
   ignore_errors: yes
 
+- name: Remove Serviço zabbix agent2
+  win_command: '{{ zabbix_win_exe_path }} --config {{ zabbix_win_install_dir }}\conf\zabbix_agent2.conf --uninstall'
+  ignore_errors: yes
+
+
 - name:  Removendo estrutura do diretorio
   win_file:
     path: "{{ item }}"
     state: absent
   loop:
     - "{{ zabbix_win_install_dir }}"
-    - "{{ zabbix_win_userparameter }}"
+    - "{{ zabbix_win_userparameters }}"
+    - "{{ zabbix_win_scripts }}"
     - "{{ zabbix_win_log }}"
