--- a/roles/zabbix_db/tasks/main.yml
+++ b/roles/zabbix_db/tasks/main.yml
@@ -1,3 +1,4 @@
 - name: Instalação do Banco de Dados Zabbix Server
   include_tasks: db.yml
+  when: ansible_facts['distribution_major_version'] == "8" or ansible_distribution_file_variety == "RedHat"
 
