--- a/deploy.agent.windows.yml
+++ b/deploy.agent.windows.yml
@@ -15,10 +15,11 @@
     - DC02
   vars:
     - zbx_front: 192.168.3.100
-    - proxy_name: 'PROXY-RJ'
-    - zbx_proxy: 192.168.3.140
-    - host_grupo: Empresa-Y
+    - proxy_name: 'PROXY-SP'
+    - zbx_proxy: 192.168.3.130
+    - host_grupo: Matriz-A
   roles:
     - role: zabbix_agent
+    #- role: zabbix_agent_uninstall_windows
 #-----------------------------------------------------------------------#
 
