--- a/roles/zabbix_agent/tasks/add.windows.yml
+++ b/roles/zabbix_agent/tasks/add.windows.yml
@@ -3,7 +3,8 @@
 - name: Adcionando hosts Windows no zabbix Frontend do Zabbix.
   local_action:
     module: community.zabbix.zabbix_host
-    server_url: http://{{ zbx_front }}/zabbix/
+    # Alterar variavel correspondente no arquivo iventario
+    server_url: http://{{ allonezbx }}/zabbix/
     login_user: '{{ username }}'
     login_password: '{{ password }}'
     host_name: "{{ansible_fqdn}}"
@@ -21,7 +22,7 @@
         ip: "{{ ansible_ip_addresses[0] }}"
         dns: ""
         port: "10050"
-    #proxy: '{{ proxy_name }}'
+    proxy: '{{ proxy_name }}'
   register: api_add_front
 - debug:
     msg: '{{ api_add_front }}' 
