--- a/group_vars/vagrant.yml
+++ b/group_vars/vagrant.yml
@@ -11,11 +11,13 @@ zbx_agent_version: 5.5
 username: 'Admin'
 password: 'zabbix'
 
-#DECLARAR AS VARIAVEL DO ARQUIVO HOSTS/ ALTERAR IP CONFORME NECESSIDADE EM HOSTS .
+# Declarar as variavies do arquivo de hosts / Alterar IP conforme sua necessidade .
+
 zbx_front: 192.168.3.100
 zbx_srv: 192.168.3.110
 zbx_db: 192.168.3.120
 zbx_proxy: 192.168.3.130
+allonezbx: 192.168.3.111
 
 # Macros de configuração do Proxy
 zabbix_link_templates:
