--- a/roles/zabbix_agent/tasks/add.linux.yml
+++ b/roles/zabbix_agent/tasks/add.linux.yml
@@ -1,8 +1,18 @@
+# Base create host groups example
+- name: Criando Grupo de host no Frontend do Zabbix
+  local_action:
+    module: community.zabbix.zabbix_group
+    server_url: http://{{ allonezbx }}/zabbix/
+    login_user: '{{ username }}'
+    login_password: '{{ password }}'
+    state: present
+    host_groups: '{{ host_grupo }}'
+
 - name: Adcionando hosts no zabbix Frontend do Zabbix.
   local_action:
     module: community.zabbix.zabbix_host
     # Alterar variavel correspondente no arquivo iventario
-    server_url: http://{{ zbx_front }}/zabbix/
+    server_url: http://{{ allonezbx }}/zabbix/
     login_user: '{{ username }}'
     login_password: '{{ password }}'
     host_name: "{{ansible_fqdn}}"
@@ -17,7 +27,8 @@
       - type: '1'
         main: 1
         useip: 1
-        ip: "{{ ansible_all_ipv4_addresses[0]}}"
+        ip: "{{ hostvars[inventory_hostname].ansible_host }}"
+        #ip: "{{ ansible_all_ipv4_addresses[0]}}"
         dns: ""
         port: "10050"
     proxy: '{{ proxy_name }}'
